# query_classifier

./: .gitignore  README.md  cuda_activate_test.py  pyproject.toml  requirements.txt  test.py  uploader.py
data/: annoted_raw_query.jsonl  combined_data.jsonl  query_claude.jsonl  query_deepseek.jsonl  query_gemini.jsonl  query_gpt.jsonl  query_grok.jsonl  raw_queries.jsonl  test.json  test.jsonl  testing.jsonl  train.json  train.jsonl  val.json
query_classifier/: __init__.py  api.py  classifier.py  cli.py
query_classifier.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/: check_query.py  classifier.py  collect_public.py  eval.py  evaluate.py  import_json.py  prepare_data.py  preprocess.py  test.py  test_model.py  trainer.py  tt.py
